Fixed thead issue and added tbody tags.

--- a/css-pseudo-classes/index.html
+++ b/css-pseudo-classes/index.html
@@ -18,6 +18,8 @@
           <th>Course</th>
           <th>Grade</th>
         </tr>
+      </thead>
+      <tbody>
         <tr>
           <td>Ada Lovelace</td>
           <td>Web Development</td>
@@ -43,7 +45,7 @@
           <td>JavaScript</td>
           <td>99</td>
         </tr>
-      </thead>
+      </tbody>
     </table>
   </div>
 </body>
