Resolved missing column-full class issue.

--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
   <div class="container">
-    <div class="row"> <!--First row for h1-->
-      <h1>Choose your character!</h1>
+    <div class="column-full">
+      <div class="row">
+        <h1>Choose your character!</h1>
+      </div>
     </div>
     <div class="row"> <!--Row starting with Link-->
       <div class="column-one-third">
