--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -10,31 +10,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2 id="main">LEARN MORE</h2>
-  <form action="">
-    <label for="email">COMPANY EMAIL</label>
-    <div>
-      <input id="email" type="text" placeholder=" sally@company.co">
-    </div>
-    <label for="name">NAME</label>
-    <div>
-      <input id="name" type="text" placeholder=" Sally Smith">
-    </div>
-    <label for="location">WHERE ARE YOU HIRING?</label>
-    <div>
-      <input id="location" type="text" placeholder=" City, Country">
-    </div>
-    <label for="dropbox">HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label>
-    <div>
-      <select name="employees" id="dropbox">
-        <option value="1-2">1-2 Engineers</option>
-        <option value="3-4">3-4 Engineers</option>
-        <option value="5-6">5-6 Engineers</option>
-      </select>
-    </div>
-    <div>
-      <button id="button" type="submit">SUBMIT</button>
-    </div>
-  </form>
+  <div class="container">
+    <h2 id="main">LEARN MORE</h2>
+    <form action="">
+      <label for="email">COMPANY EMAIL</label>
+      <div>
+        <input id="email" type="text" placeholder=" sally@company.co">
+      </div>
+      <label for="name">NAME</label>
+      <div>
+        <input id="name" type="text" placeholder=" Sally Smith">
+      </div>
+      <label for="location">WHERE ARE YOU HIRING?</label>
+      <div>
+        <input id="location" type="text" placeholder=" City, Country">
+      </div>
+      <label for="dropbox">HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label>
+      <div>
+        <select name="employees" id="dropbox">
+          <option value="1-2">1-2 Engineers</option>
+          <option value="3-4">3-4 Engineers</option>
+          <option value="5-6">5-6 Engineers</option>
+        </select>
+      </div>
+      <div>
+        <button id="button" type="submit">SUBMIT</button>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
