Resolved semantic labeling issue for .column-fourth.

--- a/css-three-column-layout/index.html
+++ b/css-three-column-layout/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="column-third">
+      <div class="column-fourth">
         <div class="circle">
           <div class="image">
             <img src="images/merge.png" alt="arrows">
@@ -26,7 +26,7 @@
         <h3>Streamlined QMS</h3>
         <p>A QMS that includes modules for all stages of the product life cycle from Design Control to CAPA</p>
       </div>
-      <div class="column-third">
+      <div class="column-fourth">
         <div class="circle">
           <div class="image">
             <img src="images/cloud-computing.png" alt="cloud">
@@ -35,7 +35,7 @@
         <h3>Integrates with existing tools</h3>
         <p>Enzyme QMS integrates with your existing tools, such as JIRA, GitHub and Jenkins with Enzyme</p>
       </div>
-      <div class="column-third">
+      <div class="column-fourth">
         <div class="circle">
           <div class="image">
             <img src="images/discussion.png" alt="people">
