--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -72,14 +72,13 @@
           <p>Schedule a private meeting now</p>
         </div>
         <div class="columnhalf" id="gsb">
-          <div class="columnhalf"></div> <!--Empty space left of get started button-->
           <div class="columnhalf" id="forgsb">
             <button class="getstarted">Get Started</button>
           </div>
         </div>
       </div>
       <div class="row" id="links">
-        <div class="columnfourth"> <!--First half of dark grey Canvas row-->
+        <div class="columnfourth" id="box"> <!--First half of dark grey Canvas row-->
           <div class="box">
             <img src="images/logo-white.png" alt="canvaslogo">
             <p>2307 Irving Street, Suite 228
@@ -88,7 +87,6 @@
             info@canvasmedical.com</p>
           </div>
         </div>
-        <div class="columnfourth"></div> <!--Empty 2nd 1/4 spot-->
         <div class="columnfourth"> <!--Start of first half of second half of gray row where Company is-->
           <p>COMPANY</p>
           <p>About Us</p>
