Removed empty divs.

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -87,17 +87,19 @@
             info@canvasmedical.com</p>
           </div>
         </div>
-        <div class="columnfourth"> <!--Start of first half of second half of gray row where Company is-->
-          <p>COMPANY</p>
-          <p>About Us</p>
-          <p>Blog</p>
-        </div>
-        <div class="columnfourth">
-          <p>PRODUCT</p>
-          <p>Product</p>
-          <p>Implementation</p>
-          <p>For Health Plans</p>
-          <p>Security</p>
+        <div class="half">
+          <div class="columnhalf">
+            <p>COMPANY</p>
+            <p>About Us</p>
+            <p>Blog</p>
+          </div>
+          <div class="columnhalf">
+            <p>PRODUCT</p>
+            <p>Product</p>
+            <p>Implementation</p>
+            <p>For Health Plans</p>
+            <p>Security</p>
+          </div>
         </div>
       </div>
     </div>
