--- a/css-ecommerce-page/index.html
+++ b/css-ecommerce-page/index.html
@@ -46,7 +46,7 @@
           <span class="retail">$2000 retail</span>
         </div>
       </div>
-      <div class="columnfifth">
+      <div class="columnfifth" id="lv">
         <div class="lv">
           <img src="images/lv-bag.jpg" alt="brown bag">
         </div>
