Added modal with confirm or cancel ability at finish

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -25,7 +25,15 @@
     <span>g</span>
     <span>h</span>
     <span>.</span>
-    <p class="hidden">Congratulations!</p>
+    <div class="modal column-full hidden">
+      <div class="popup column-half row">
+        <div class="modaltext column-full">
+          <p class="cancelp">Do you want to play again?</p>
+        </div>
+        <button class="cancel modalbutton">CANCEL</button>
+        <button class="confirm modalbutton">CONFIRM</button>
+      </div>
+    </div>
   </main>
   <script src="main.js"></script>
 </body>
